fixed ooter layout by wrapping content ina section tag within the main tag and adding new style rules

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,13 +2,17 @@ nav {
 
 }
 
-main {
+#page {
   outline: 1px solid yellow;
   position: relative;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 /*.pull-right {
   outline: 2px dashed blue;
   float: right;
 }*/
+
+#footerControll{
+  min-height: 750px;
+}
